--- a/content/posts/hello-world.mdx
+++ b/content/posts/hello-world.mdx
@@ -1,5 +1,12 @@
 ---
-title: Hello, World!
+title: 'Hello, World!'
+slug: hello-world
+location:
+  - seattle
+  - chicago
+coordinates:
+  longitude: 47.628162
+  latitude: -122.28738
 ---
 
 ## Hello World!
