custom mdx styling

--- a/src/app/content/sinking-ship.mdx
+++ b/src/app/content/sinking-ship.mdx
@@ -9,3 +9,7 @@ location: ["Seattle"]
 ## This is the sinking ship mdx
 
 It was imported!
+
+HAHAHAHHAHA
+
+<Comic speechBubbles={[{ text: "Woah, I'm Theodore Roosevelt!" }]} image="/TR.png"/>
