switch to next-mdx-remote-client

--- a/src/app/content/sinking-ship.mdx
+++ b/src/app/content/sinking-ship.mdx
@@ -1,6 +1,7 @@
 ---
-title: Sinking Ship Test Frontmatter
+title: Sinking Ship Parking Garage
 location: ["Seattle"]
+latlon: [47.601984, -122.332644]
 ---
 
 
