map pins can communicate

--- a/src/app/content/sinking-ship.mdx
+++ b/src/app/content/sinking-ship.mdx
@@ -2,15 +2,14 @@
 title: Sinking Ship Parking Garage
 location: ["Seattle"]
 latlon: [47.601984, -122.332644]
+zoom: 11
 ---
 
 
 # Sinking Ship
 
-## This is the sinking ship mdx
+Here, where Yesler, 1st, and James meet, a triangle piece of land hosts a unique parking garage called the “Sinking Ship”.
 
-It was imported!
-
-HAHAHAHHAHA
+Before this parking garage was built here, it was the site of three Seattle hotels: the Occidental I, the Occidental II, and the Hotel Seattle.
 
 <Comic speechBubbles={[{ text: "Woah, I'm Theodore Roosevelt!" }]} image="/TR.png"/>
