generate json for continuous feed, add map interactions

--- a/src/app/content/sinking-ship.mdx
+++ b/src/app/content/sinking-ship.mdx
@@ -3,6 +3,7 @@ title: Sinking Ship Parking Garage
 location: ["Seattle"]
 latlon: [47.601984, -122.332644]
 zoom: 11
+cardImage: "/streetfight.png"
 ---
 
 
