comic updates and add lcitems

--- a/src/app/content/denny-regrade.mdx
+++ b/src/app/content/denny-regrade.mdx
@@ -13,4 +13,8 @@ Hello.
 
 This is where the denny regrade images will go.
 
-<Comic speechBubbles={[{ text: "Woah, I'm Theodore Roosevelt!" }]} image="/TR.png"/>
+<LOCItem image="/loc/hotel-seattle.png" lcLink="" caption="View of Hotel Seattle"/>
+
+<LOCItem lcLink="https://www.loc.gov/resource/pcrd.1d07439/" image="/loc/regrade-results.jpg"/>
+
+<Comic overlap={90} position={"left"} speechBubbles={[{ text: "Woah, I'm Theodore Roosevelt!" },{ text: "Woah, I'm Theodore Roosevelt!" },{ text: "Woah, I'm Theodore Roosevelt!" },{ text: "Woah, I'm Theodore Roosevelt!" },{ text: "Woah, I'm Theodore Roosevelt!" },{text: "I was the president"},{text: "A boisterous clown does every foolish game: hurling icicles, juggling kaleidoscopes, laughing maniacally, neglecting old pants, quickly revealing sparkling tight underwear, vamping while x-raying your zebra."}]} image="/TR.png"/>
