commit font and one image

--- a/src/app/content/denny-regrade.mdx
+++ b/src/app/content/denny-regrade.mdx
@@ -13,7 +13,7 @@ Hello.
 
 This is where the denny regrade images will go.
 
-<LOCItem image="/loc/hotel-seattle.png" lcLink="" caption="View of Hotel Seattle"/>
+<LOCItem image="/loc/regrade-results.jpg" lcLink="" caption="View of Hotel Seattle"/>
 
 <LOCItem lcLink="https://www.loc.gov/resource/pcrd.1d07439/" image="/loc/regrade-results.jpg"/>
 
