LC items, add bold text in comics

--- a/src/app/content/uw.mdx
+++ b/src/app/content/uw.mdx
@@ -1,11 +1,14 @@
 ---
-title: UW Test making static pages
+title: University of Washington
 location: ["Seattle"]
 latlon: [47.653727, -122.307752]
 zoom: 13
+cardImage: "/loc/uw-hoo.jpg"
 ---
 
 
-# Wahoo
+# Hoo Hoo House, University of Washington
 
-This content is serving now heck yes
+This content is serving now!
+
+<LOCItem caption="Exterior" image="/loc/uw-hoo.jpg" linkOut="https://www.loc.gov/resource/hhh.wa0056.photos/?sp=1"/>
