--- a/src/app/content/denny-regrade.mdx
+++ b/src/app/content/denny-regrade.mdx
@@ -1,20 +1,35 @@
 ---
-title: Denny Regrade
+title: Moving Mountains Downtown
 location: ["Seattle"]
 latlon: [47.620815, -122.358086]
 zoom: 10
 tags: []
+cardImage: "/loc/regrade-results.jpg"
 ---
 
 
-# Denny Regrade
+# The Denny Regrades
 
-Hello.
+When Arthur Denny lived in Seattle, he lived on a hill named after himself -- Denny Hill.  
 
-This is where the denny regrade images will go.
+<Comic  position={"left"} speechBubbles={[{ text: "..." }, {text: "You **must** be mistaken. **Seattle doesn't have a Denny Hill**."}]} image="/TR.png"/>
 
-<LOCItem image="/loc/regrade-results.jpg" lcLink="" caption="View of Hotel Seattle"/>
+<Comic  position={"left"} speechBubbles={[{text: "We have First Hill, Capitol Hill"}, {text: "Cherry Hill, Beacon Hill, and even a slight deceptive slope up Ballard."}]} image="/TR.png"/>
 
-<LOCItem lcLink="https://www.loc.gov/resource/pcrd.1d07439/" image="/loc/regrade-results.jpg"/>
+<Comic  position={"left"} speechBubbles={[{ text: "But no Denny Hill" }]} image="/TR.png"/>
 
-<Comic overlap={90} position={"left"} speechBubbles={[{ text: "Woah, I'm Theodore Roosevelt!" },{ text: "Woah, I'm Theodore Roosevelt!" },{ text: "Woah, I'm Theodore Roosevelt!" },{ text: "Woah, I'm Theodore Roosevelt!" },{ text: "Woah, I'm Theodore Roosevelt!" },{text: "I was the president"},{text: "A boisterous clown does every foolish game: hurling icicles, juggling kaleidoscopes, laughing maniacally, neglecting old pants, quickly revealing sparkling tight underwear, vamping while x-raying your zebra."}]} image="/TR.png"/>
+
+
+<Comic  position={"right"} speechBubbles={[{ text: "That's true! Because they tore down a bunch of hills" }]} image="/TR.png"/>
+
+<LOCItem linkOut="https://www.loc.gov/item/2015646669/" image="/loc/cutting-hill.jpg" caption="Cutting down a hill with a powerful jet of water"/>
+
+Denny imagined that Seattle would be the capitol of the state of Washington with the center of town being in what is now Belltown.
+
+He wanted to make it easier to access by horse, so the big regrade of Seattle started. The technology of the day was to shoot water at the hills and take the wet clay and dump it into Elliot Bay.
+
+<LOCItem image="/loc/regrade-results.jpg" linkOut="https://www.loc.gov/item/2024693820/" caption="The Washington Hotel, where Theodore Roosevelt stayed when he visited Seattle"/>
+
+<Comic position={"left"} speechBubbles={[{ text: "It was a lot of work, but at least we made a beautiful capitol." }]} image="/TR.png"/>
+<Comic position={"right"} speechBubbles={[]} image="/TR.png"/>
+<Comic position={"left"} speechBubbles={[{ text: "... what?" }]} image="/TR.png"/>
