--- a/src/app/content/seattleCentral.mdx
+++ b/src/app/content/seattleCentral.mdx
@@ -4,7 +4,7 @@ location: ["Seattle"]
 latlon: [47.616761121594315, -122.32169094779286]
 zoom: 17
 tags: [""]
-cardImage: "/streetfight.png"
+cardImage: "/loc/food-fight.jpg"
 ---
 
 ## Woah there was a food fight!
