--- a/src/app/content/sinking-ship.mdx
+++ b/src/app/content/sinking-ship.mdx
@@ -3,14 +3,34 @@ title: Sinking Ship Parking Garage
 location: ["Seattle"]
 latlon: [47.601984, -122.332644]
 zoom: 11
-cardImage: "/streetfight.png"
+cardImage: "/loc/triangle.jpg"
 ---
 
 
 # Sinking Ship
 
+<LOCItem lcLink="https://www.loc.gov/item/75696663/" image="/loc/triangle.jpg" caption="Map of Seattle in 1891"/>
+
 Here, where Yesler, 1st, and James meet, a triangle piece of land hosts a unique parking garage called the “Sinking Ship”.
 
 Before this parking garage was built here, it was the site of three Seattle hotels: the Occidental I, the Occidental II, and the Hotel Seattle.
 
-<Comic speechBubbles={[{ text: "Woah, I'm Theodore Roosevelt!" }]} image="/TR.png"/>
+<LOCItem lcLink="https://www.loc.gov/item/75696663/" image="/loc/triangle.jpg" caption="Map of Seattle in 1891"/>
+<Comic position="right" speechBubbles={[{ text: 'This was the first "fancy" hotel in Seattle.' }]} image="/comics/sinking-ship/g1.png" overlap={150} absoluteHeight={60}/>
+<Comic speechBubbles={[{ text: 'But it’s cursed! how many hotels stood here before?' }]} image="/comics/sinking-ship/g2.png"/>
+<Comic speechBubbles={[{ text: '...' },{text:"Three..."}]} position="right"/>
+<Comic speechBubbles={[{ text: 'And how many got taken out by disasters?' }]} position="left"/>
+<Comic speechBubbles={[{ text: '...two...' }]} position="right"/>
+<Comic speechBubbles={[{ text: 'And tell me, how many hotels are standing there now?' }]} position="left"/>
+<Comic speechBubbles={[{ text: 'none :(' }]} position="right"/>
+<LOCItem lcLink="https://www.loc.gov/item/75696663/" image="/loc/triangle.jpg" caption="Map of Seattle in 1891"/>
+
+The Occidental II was burned down by the Great Seattle Fire, only 4 years after it had been built to replace the Occidental I.
+
+The Hotel Seattle, which was built to replace it, was also unlucky -- in 1949, when a huge earthquake shook Olympia, many buildings in Pioneer Square also got damaged. This led to the Hotel Seattle fall into disrepair, and it was the first building to get torn down in a larger plan to renovate Pioneer Square.
+
+If a building in Pioneer Square is still standing that was around for the 1949 earthquake, you can probably find signs of earthquake damage.
+
+<LOCItem lcLink="https://www.loc.gov/item/75696663/" image="/loc/triangle.jpg" caption="Map of Seattle in 1891"/>
+ 
+{/* {scheme}://{server}{/prefix}/{identifier}/{region}/{size}/{rotation}/{quality}.{format} */}
