more content, camera options

--- a/src/app/content/denny-regrade.mdx
+++ b/src/app/content/denny-regrade.mdx
@@ -5,6 +5,7 @@ latlon: [47.620815, -122.358086]
 zoom: 10
 tags: []
 cardImage: "/loc/regrade-results.jpg"
+cameraType: "stereograph"
 ---
 
 
@@ -12,24 +13,26 @@ cardImage: "/loc/regrade-results.jpg"
 
 When Arthur Denny lived in Seattle, he lived on a hill named after himself -- Denny Hill.  
 
-<Comic  position={"left"} speechBubbles={[{ text: "..." }, {text: "You **must** be mistaken. **Seattle doesn't have a Denny Hill**."}]} image="/TR.png"/>
+<Comic  position={"left"} speechBubbles={[{ text: "..." }, {text: "You must be mistaken. Seattle doesn't have a *Denny Hill.*"}]} image="/comics/denny-regrade/citizen-1.png"/>
 
-<Comic  position={"left"} speechBubbles={[{text: "We have First Hill, Capitol Hill"}, {text: "Cherry Hill, Beacon Hill, and even a slight deceptive slope up Ballard."}]} image="/TR.png"/>
+<Comic  position={"left"} speechBubbles={[{text: "We have First Hill, Capitol Hill"}, {text: "Cherry Hill, Beacon Hill, and even a slight deceptive slope up Ballard."}]} image="/comics/denny-regrade/citizen-2.png"/>
 
-<Comic  position={"left"} speechBubbles={[{ text: "But no Denny Hill" }]} image="/TR.png"/>
+<Comic  position={"left"} speechBubbles={[{ text: "But no Denny Hill" }]} image="/comics/denny-regrade/citizen-3.png"/>
 
 
 
-<Comic  position={"right"} speechBubbles={[{ text: "That's true! Because they tore down a bunch of hills" }]} image="/TR.png"/>
+<Comic  position={"right"} speechBubbles={[{ text: "That's right! Because we tore it down!" }]} image="/comics/denny-regrade/arthur-1.png"/>
 
 <LOCItem linkOut="https://www.loc.gov/item/2015646669/" image="/loc/cutting-hill.jpg" caption="Cutting down a hill with a powerful jet of water"/>
 
 Denny imagined that Seattle would be the capitol of the state of Washington with the center of town being in what is now Belltown.
 
-He wanted to make it easier to access by horse, so the big regrade of Seattle started. The technology of the day was to shoot water at the hills and take the wet clay and dump it into Elliot Bay.
+City engineer Arthur H. Dimmock wanted to make it easier to access by horse, so the big regrade of Seattle started. The technology of the day was to shoot water at the hills and take the wet clay and dump it into Elliot Bay.
+
+The water was pumped from Lake Union - over *20,000 gallons* of water were used to cut down about 27 city blocks.
 
 <LOCItem image="/loc/regrade-results.jpg" linkOut="https://www.loc.gov/item/2024693820/" caption="The Washington Hotel, where Theodore Roosevelt stayed when he visited Seattle"/>
 
-<Comic position={"left"} speechBubbles={[{ text: "It was a lot of work, but at least we made a beautiful capitol." }]} image="/TR.png"/>
-<Comic position={"right"} speechBubbles={[]} image="/TR.png"/>
-<Comic position={"left"} speechBubbles={[{ text: "... what?" }]} image="/TR.png"/>
+<Comic position={"right"} speechBubbles={[{ text: "It was a lot of work, but at least we made a beautiful capitol." }]} image="/comics/denny-regrade/arthur-2.png"/>
+<Comic position={"left"} speechBubbles={[]} image="/comics/denny-regrade/citizen-4.png"/>
+<Comic position={"right"} speechBubbles={[{ text: "... what?" }]} image="/comics/denny-regrade/arthur-3.png"/>
