--- a/src/app/content/seattleCentral.mdx
+++ b/src/app/content/seattleCentral.mdx
@@ -2,13 +2,17 @@
 title: Seattle Central College
 location: ["Seattle"]
 latlon: [47.616761121594315, -122.32169094779286]
-zoom: 17
+zoom: 13
 tags: [""]
 cardImage: "/loc/food-fight.jpg"
+cameraType: "newspaper"
+frameImage: "/loc/camera-images/high-school.png"
+imagePlacement: [1080, 808]
+imageDimensions: [293, 405]
 ---
 
-## Woah there was a food fight!
+## Seattle Central College used to be Seattle's first high school
 
-Even teachers were involved
+(kinda)
 
-wowwwww
+<LOCItem linkOut="https://www.loc.gov/resource/sn87093407/1923-05-17/ed-1/?sp=9&r=-0.321,0.093,1.881,1.062,0" image="/loc/food-fight.jpg"/>
