--- a/src/app/content/test.mdx
+++ b/src/app/content/test.mdx
@@ -8,4 +8,5 @@ cardImage: "/loc/regrade-results.jpg"
 ---
 
 {/* <Comic speechBubbles={[{text:'Hello, world. **This is bold.** After bold.'}]}/> */}
-<Comic speechBubbles={[{text:'Hello world. **This is bold.** After bold.'}]}/>
+{/* <Comic speechBubbles={[{text:'Hello world. **This is bold.** After bold.'}]}/> */}
+<Comic speechBubbles={[{text:'Hello world. This is *italic.* After italic.'}]}/>
