forcing mobile, animations, taking out updating slug as scroll

--- a/src/app/content/denny-regrade.mdx
+++ b/src/app/content/denny-regrade.mdx
@@ -3,9 +3,10 @@ title: Moving Mountains Downtown
 location: ["Seattle"]
 latlon: [47.620815, -122.358086]
 zoom: 10
-tags: []
+tags: ["infrastructure", "downtown"]
 cardImage: "/loc/regrade-results.jpg"
 cameraType: "stereograph"
+stampName: "regrade.svg"
 ---
 
 
