--- a/src/app/content/joseprizal.mdx
+++ b/src/app/content/joseprizal.mdx
@@ -3,7 +3,7 @@ title: The Most Beautiful View of Seattle
 location: ["Seattle"]
 latlon: [47.595096, -122.317290]
 zoom: 12
-tags: [""]
+tags: ["bridges"]
 cardImage: "/loc/seattle-skyline.jpg"
 ---
 # Dr. Jose P Rizal Bridge
@@ -25,6 +25,6 @@ In 1974, this bridge was renamed to the Dr. Jose P. Rizal Bridge, due to the
 efforts of Seattle Filipino Americans Trinidad Rojo and Vic Bacho.
 <Comic position="full" image="/comics/jose-p-rizal/rojo-bacho.png" speechBubbles={[]}/>
 
-<LOCItem image="/loc/joseprizal.jpg" caption="Page from the Filipino Forum, a newspaper for Seattle's Filipino community" linkOut=""  assetLink="https://tile.loc.gov/image-services/iiif/service:ndnp:wa:batch_wa_canvasback_ver02:data:sn88085780:00211107650:1961061601:1115/full/pct:12.5/0/default.jpg#h=682&w=442"/>
+<LOCItem linkOut="https://www.loc.gov/resource/sn88085780/1961-06-16/ed-1/?sp=1" image="/loc/joseprizal.jpg" caption="Page from the Filipino Forum, a newspaper for Seattle's Filipino community"  />
 
 You can learn more about Dr. Rizal [here](https://blogs.loc.gov/law/2024/02/remembering-jose-rizal-filipino-revolutionary/).
