--- a/src/app/content/uw.mdx
+++ b/src/app/content/uw.mdx
@@ -3,6 +3,7 @@ title: University of Washington
 location: ["Seattle"]
 latlon: [47.653727, -122.307752]
 zoom: 13
+tags: ["university"]
 cardImage: "/loc/uw-hoo.jpg"
 ---
 
