--- a/src/app/content/sinking-ship.mdx
+++ b/src/app/content/sinking-ship.mdx
@@ -4,6 +4,7 @@ location: ["Seattle"]
 latlon: [47.601984, -122.332644]
 zoom: 11
 cardImage: "/loc/triangle.jpg"
+tags: ["infrastructure"]
 ---
 
 
@@ -17,14 +18,14 @@ Before this parking garage was built here, it was the site of three Seattle hote
 
 <LOCItem linkOut="https://www.loc.gov/resource/gdcmassbookdig.seattlememories00redf/?sp=21" image="/loc/occidental.png" caption="Occidental Hotel"/>
 <Comic position="right" speechBubbles={[{ text: '*This* was the first "fancy" hotel in Seattle.' }]} image="/comics/sinking-ship/g1.png" overlap={150} absoluteHeight={60}/>
-<LOCItem  image="/loc/occidental-inside.png"/>
+<LOCItem linkOut="" image="/loc/occidental-inside.png"/>
 <Comic overlap={150} speechBubbles={[{ text: 'But it’s cursed! how many hotels stood here before?' }]} image="/comics/sinking-ship/g2.png"/>
 <Comic speechBubbles={[{ text: '...' },{text:"Three..."}]} position="right"/>
 <Comic speechBubbles={[{ text: 'And how many got taken out by disasters?' }]} position="left"/>
 <Comic speechBubbles={[{ text: '...two...' }]} position="right"/>
 <Comic speechBubbles={[{ text: 'And tell me, how many hotels are standing there now?' }]} position="left"/>
 <Comic speechBubbles={[{ text: 'none :(' }]} position="right"/>
-<LOCItem image="/loc/hotel-earthquake.png"/>
+<LOCItem linkOut="" image="/loc/hotel-earthquake.png"/>
 
 The Occidental II was burned down by the Great Seattle Fire, only 4 years after it had been built to replace the Occidental I.
 
@@ -32,7 +33,7 @@ The Hotel Seattle, which was built to replace it, was also unlucky -- in 1949, w
 
 If a building in Pioneer Square is still standing that was around for the 1949 earthquake, you can probably find signs of earthquake damage.
 
-<LOCItem lcLink="https://www.loc.gov/item/75696663/" image="/loc/susan-journal.png" caption="Map of Seattle in 1891"/>
+<LOCItem linkOut="https://www.loc.gov/item/75696663/" image="/loc/susan-journal.png" caption="Map of Seattle in 1891"/>
  
  <Comic position="right" overlap={150} image="/comics/sinking-ship/g3.png" speechBubbles={[{text:"when Susan B. Anthony Visited Seattle, She stayed at the Occidental I."},{text:"That is really cool"}]}/>
 
