filter out meta.js, fix searchparam build, add big link component

--- a/src/app/content/joseprizal.mdx
+++ b/src/app/content/joseprizal.mdx
@@ -28,3 +28,10 @@ efforts of Seattle Filipino Americans Trinidad Rojo and Vic Bacho.
 <LOCItem linkOut="https://www.loc.gov/resource/sn88085780/1961-06-16/ed-1/?sp=1" image="/loc/joseprizal.jpg" caption="Page from the Filipino Forum, a newspaper for Seattle's Filipino community"  />
 
 You can learn more about Dr. Rizal [here](https://blogs.loc.gov/law/2024/02/remembering-jose-rizal-filipino-revolutionary/).
+
+<BigLink link="https://blogs.loc.gov/law/2024/02/remembering-jose-rizal-filipino-revolutionary/" thumbnail="/loc/joseprizal.jpg" title="Remembering Jose Rizal Filipino Revolutionary"/>
+
+aldskaf;damageasdf
+
+alskdf;alskdf
+adskfj;slkdfj
