update bubble shape and size

--- a/src/app/content/sinking-ship.mdx
+++ b/src/app/content/sinking-ship.mdx
@@ -35,7 +35,7 @@ If a building in Pioneer Square is still standing that was around for the 1949 e
 
 <LOCItem linkOut="https://www.loc.gov/item/75696663/" image="/loc/susan-journal.png" caption="Page from Susan B. Anthony's journal"/>
  
- <Comic position="right" overlap={150} image="/comics/sinking-ship/g3.png" speechBubbles={[{text:"when Susan B. Anthony Visited Seattle, She stayed at the Occidental I."},{text:"That is really cool"}]}/>
+ <Comic position="right" overlap={150} image="/comics/sinking-ship/g3.png" speechBubbles={[{text:"When Susan B. Anthony Visited Seattle, She stayed at the Occidental I."},{text:"That is really cool"}]}/>
 
  The parking garage that sits here today takes advantage of the unique shape of the land, as well as its grading along a hill.
 {/* {scheme}://{server}{/prefix}/{identifier}/{region}/{size}/{rotation}/{quality}.{format} */}
