updat sba journal link

--- a/src/app/content/sinking-ship.mdx
+++ b/src/app/content/sinking-ship.mdx
@@ -33,7 +33,7 @@ The Hotel Seattle, which was built to replace it, was also unlucky -- in 1949, w
 
 If a building in Pioneer Square is still standing that was around for the 1949 earthquake, you can probably find signs of earthquake damage.
 
-<LOCItem linkOut="https://www.loc.gov/item/75696663/" image="/loc/susan-journal.png" caption="Page from Susan B. Anthony's journal"/>
+<LOCItem linkOut="https://www.loc.gov/resource/mss11049.mss11049-001_00683_00886/?sp=159" image="/loc/susan-journal.png" caption="Page from Susan B. Anthony's journal"/>
  
  <Comic position="right" overlap={150} image="/comics/sinking-ship/g3.png" speechBubbles={[{text:"When Susan B. Anthony Visited Seattle, She stayed at the Occidental I."},{text:"That is really cool"}]}/>
 
