update comic styling with caption

--- a/src/app/content/sinking-ship.mdx
+++ b/src/app/content/sinking-ship.mdx
@@ -17,9 +17,9 @@ Here, where Yesler, 1st, and James meet, a triangle piece of land hosts a unique
 Before this parking garage was built here, it was the site of three Seattle hotels: the Occidental I, the Occidental II, and the Hotel Seattle.
 
 <LOCItem linkOut="https://www.loc.gov/resource/gdcmassbookdig.seattlememories00redf/?sp=21" image="/loc/occidental.png" caption="Occidental Hotel"/>
-<Comic position="right" speechBubbles={[{ text: '*This* was the first "fancy" hotel in Seattle.' }]} image="/comics/sinking-ship/g1.png" overlap={150} absoluteHeight={60}/>
+<Comic caption="Doc Maynard, believer of the 'Seattle streets should follow the compass' system" position="right" speechBubbles={[{ text: '*This* was the first "fancy" hotel in Seattle.' }]} image="/comics/sinking-ship/g1.png" overlap={150} absoluteHeight={200}/>
 <LOCItem linkOut="https://www.loc.gov/resource/gdcmassbookdig.metropolitanseat00unse/?sp=19&r=-0.073,0.224,0.854,0.482,0" image="/loc/seattle/seattle-hotel.png"/>
-<Comic overlap={150} speechBubbles={[{ text: 'But it’s cursed! how many hotels stood here before?' }]} image="/comics/sinking-ship/g2.png"/>
+<Comic caption="Arthur Denny, believer of the 'Seattle streets should follow the coastline' system" overlap={150} speechBubbles={[{ text: 'But it’s cursed! how many hotels stood here before?' }]} image="/comics/sinking-ship/g2.png" absoluteHeight={60}/>
 <Comic speechBubbles={[{ text: '...' },{text:"Three..."}]} position="right"/>
 <Comic speechBubbles={[{ text: 'And how many got taken out by disasters?' }]} position="left"/>
 <Comic speechBubbles={[{ text: '...two...' }]} position="right"/>
