--- a/src/app/content/sinking-ship.mdx
+++ b/src/app/content/sinking-ship.mdx
@@ -10,22 +10,22 @@ tags: ["infrastructure"]
 
 # Sinking Ship
 
-<LOCItem linkOut="https://www.loc.gov/item/75696663/" image="/loc/triangle.jpg" caption="Map of Seattle in 1891"/>
+<LOCItem linkOut="https://www.loc.gov/item/75696663/" alt="crowded illustrated map of downtown Seattle" image="/loc/triangle.jpg" caption="Map of Seattle in 1891"/>
 
 Here, where Yesler, 1st, and James meet, a triangle piece of land hosts a unique parking garage called the “Sinking Ship”.
 
 Before this parking garage was built here, it was the site of three Seattle hotels: the Occidental I, the Occidental II, and the Hotel Seattle.
 
-<LOCItem linkOut="https://www.loc.gov/resource/gdcmassbookdig.seattlememories00redf/?sp=21" image="/loc/occidental.png" caption="Occidental Hotel"/>
-<Comic caption="Doc Maynard, believer of the 'Seattle streets should follow the compass' system" position="right" speechBubbles={[{ text: '*This* was the first "fancy" hotel in Seattle.' }]} image="/comics/sinking-ship/g1.png" overlap={150} absoluteHeight={200}/>
-<LOCItem linkOut="https://www.loc.gov/resource/gdcmassbookdig.metropolitanseat00unse/?sp=19&r=-0.073,0.224,0.854,0.482,0" image="/loc/seattle/seattle-hotel.png"/>
-<Comic caption="Arthur Denny, believer of the 'Seattle streets should follow the coastline' system" overlap={150} speechBubbles={[{ text: 'But it’s cursed! how many hotels stood here before?' }]} image="/comics/sinking-ship/g2.png" absoluteHeight={60}/>
+<LOCItem linkOut="https://www.loc.gov/resource/gdcmassbookdig.seattlememories00redf/?sp=21" alt="photograph of a two story, medium building with a crowd outside" image="/loc/occidental.png" caption="Occidental Hotel"/>
+<Comic alt="illustration of an old-timey man with glasses" caption="Doc Maynard, believer of the 'Seattle streets should follow the compass' system" position="right" speechBubbles={[{ text: '*This* was the first "fancy" hotel in Seattle.' }]} image="/comics/sinking-ship/g1.png" overlap={150} absoluteHeight={200}/>
+<LOCItem linkOut="https://www.loc.gov/resource/gdcmassbookdig.metropolitanseat00unse/?sp=19&r=-0.073,0.224,0.854,0.482,0" alt="photograph of a five story large building shaped like a wedge" image="/loc/seattle/seattle-hotel.png"/>
+<Comic alt="illustration of an old-timey man with high cheekbones" caption="Arthur Denny, believer of the 'Seattle streets should follow the coastline' system" overlap={150} speechBubbles={[{ text: 'But it’s cursed! how many hotels stood here before?' }]} image="/comics/sinking-ship/g2.png" absoluteHeight={60}/>
 <Comic speechBubbles={[{ text: '...' },{text:"Three..."}]} position="right"/>
 <Comic speechBubbles={[{ text: 'And how many got taken out by disasters?' }]} position="left"/>
 <Comic speechBubbles={[{ text: '...two...' }]} position="right"/>
 <Comic speechBubbles={[{ text: 'And tell me, how many hotels are standing there now?' }]} position="left"/>
 <Comic speechBubbles={[{ text: 'none :(' }]} position="right"/>
-<LOCItem linkOut="https://www.loc.gov/resource/sn86071999/1949-04-16/ed-1/?sp=1" image="/loc/hotel-earthquake.png" caption="April 16, 1949"/>
+<LOCItem linkOut="https://www.loc.gov/resource/sn86071999/1949-04-16/ed-1/?sp=1" alt="newspaper - The Northwest Times - with image of Hotel Seattle" image="/loc/hotel-earthquake.png" caption="April 16, 1949"/>
 
 The Occidental II was burned down by the Great Seattle Fire, only 4 years after it had been built to replace the Occidental I.
 
@@ -33,9 +33,9 @@ The Hotel Seattle, which was built to replace it, was also unlucky -- in 1949, w
 
 If a building in Pioneer Square is still standing that was around for the 1949 earthquake, you can probably find signs of earthquake damage.
 
-<LOCItem linkOut="https://www.loc.gov/resource/mss11049.mss11049-001_00683_00886/?sp=159" image="/loc/susan-journal.png" caption="Page from Susan B. Anthony's journal"/>
+<LOCItem linkOut="https://www.loc.gov/resource/mss11049.mss11049-001_00683_00886/?sp=159" alt="two page spread of a notebook with cursive" image="/loc/susan-journal.png" caption="Page from Susan B. Anthony's journal"/>
  
- <Comic position="right" overlap={150} image="/comics/sinking-ship/g3.png" speechBubbles={[{text:"When Susan B. Anthony Visited Seattle, She stayed at the Occidental I."},{text:"That is really cool"}]}/>
+ <Comic alt="Doc Maynard is standing looking proud" position="right" overlap={150} image="/comics/sinking-ship/g3.png" speechBubbles={[{text:"When Susan B. Anthony Visited Seattle, She stayed at the Occidental I."},{text:"That is really cool"}]}/>
 
  The parking garage that sits here today takes advantage of the unique shape of the land, as well as its grading along a hill.
 {/* {scheme}://{server}{/prefix}/{identifier}/{region}/{size}/{rotation}/{quality}.{format} */}
