--- a/src/app/content/sewy/ames.mdx
+++ b/src/app/content/sewy/ames.mdx
@@ -1,11 +1,20 @@
 ---
 title: Pyramid on the Plains
+locationTitle: Ames Monument
 location: ["SEWY"]
+address:
 latlon: [41.130344, -105.397999]
 zoom: 13
-tags: [""]
-cardImage: "/placeholderImage.png"
+tags: ["albany"]
+neighborhood: Laramie
+cameraImage: "/loc/sewy/ames/viewFromNE.png"
+cardImage: "/loc/sewy/ames/viewFromNE.png"
+stampName:
+photoPrompt:
+blurb:
 ---
 
 
-# Temp holder for ames monument
+# Ames Monument
+
+<LOCItem caption="View from the northeast" alt="Color photograph of pyramid" image="/loc/sewy/ames/viewFromNE.png" linkOut="https://www.loc.gov/resource/hhh.wy0049.photos/?sp=1"/>
