new comic format

--- a/src/app/content/seattle/names/joseprizal.mdx
+++ b/src/app/content/seattle/names/joseprizal.mdx
@@ -5,6 +5,14 @@ latlon: [47.595096, -122.317290]
 zoom: 12
 tags: ["names"]
 cardImage: "/loc/seattle-skyline.jpg"
+locationTitle: Dr. Jose P Rizal Bridge
+address:
+neighborhood:
+cameraImage: "/placeholderThumbnail.png"
+stampName:
+photoPrompt:
+blurb:
+
 ---
 # Dr. Jose P Rizal Bridge
 
