--- a/src/app/content/seattle/olmsted/alki.mdx
+++ b/src/app/content/seattle/olmsted/alki.mdx
@@ -5,4 +5,14 @@ latlon: [47.5813678738586, -122.40613128796143]
 zoom: 15
 tags: ["olmsted", "west seattle"]
 cardImage: "/placeholderImage.png"
+
+
+locationTitle: Alki Point Bathing Beach
+address:
+neighborhood: West Seattle
+cameraImage: "/placeholderThumbnail.png"
+stampName:
+photoPrompt:
+blurb:
+
 ---
