--- a/src/app/content/seattle/olmsted/arboretum.mdx
+++ b/src/app/content/seattle/olmsted/arboretum.mdx
@@ -5,4 +5,14 @@ latlon: [47.634805657137285, -122.29679417089925]
 zoom: 15
 tags: ["olmsted"]
 cardImage: "/placeholderImage.png"
+
+locationTitle: Washington Park Arboretum
+address:
+neighborhood: Madison Valley
+cameraImage: "/placeholderThumbnail.png"
+stampName:
+photoPrompt:
+blurb:
 ---
+
+
