better view for mobile

--- a/src/app/content/seattle/olmsted/calAnderson.mdx
+++ b/src/app/content/seattle/olmsted/calAnderson.mdx
@@ -3,6 +3,6 @@ title: Cal Anderson Park
 location: ["Seattle"]
 latlon: [47.618217728211825, -122.31945593251146]
 zoom: 15
-tags: ["olmsted", "names", "cap hill", "walk"]
+tags: ["olmsted", "names", "cap hill", "walk", "light rail"]
 cardImage: ""
 ---
