--- a/src/app/content/seattle/looking-up/sinking-ship.mdx
+++ b/src/app/content/seattle/looking-up/sinking-ship.mdx
@@ -8,7 +8,7 @@ latlon: [47.601984, -122.332644]
 zoom: 13
 cameraImage: "/loc/occidental.png"
 cardImage: "/loc/triangle.jpg"
-tags: ["looking up", "downtown"]
+tags: ["looking up", "downtown", "light rail"]
 photoPrompt: "Find the best and worst angles of the garage."
 blurb: "At the corner of Yesler, 1, and James sits the Sinking Ship Parking Garage, which was voted the coolest parking garage in the country. But before it was a parking garage, a famous hotel sat here."
 stampName: "/seattle-general-2.svg"
