--- a/src/app/content/seattle/names/denny-regrade.mdx
+++ b/src/app/content/seattle/names/denny-regrade.mdx
@@ -16,17 +16,21 @@ stickers: [{image: "/loc/cutting-hill.jpg", linkOut: "https://www.loc.gov/item/2
 
 # The Denny Regrades
 
-When Arthur Denny lived in Seattle, he lived on a hill named after himself -- Denny Hill.  
+When Arthur Denny lived in Seattle, he lived on a hill named after himself -- Denny Hill. 
+<ComicSection elements={[
+    {type:"image", src:"/comics/denny-regrade/citizen-1.png", position:{col:1, row:1}, size:{width:1, height:1}},
+    {type:"text", src:"You must be mistaken. Seattle doesn't have a *Denny Hill.*", position:{col:2, row:1}, size:{width:2, height:1}, style:{outline: "bubble"}, bubbleStyle: {tailDegree: 180}},
+    {type:"image", src:"/comics/denny-regrade/citizen-2.png", position:{col:1, row:3}, size:{width:1, height:1}},
+    {type:"text", src:"We have First Hill, Capitol Hill", position:{col:2, row:3}, size:{width:2, height:1}, style:{outline: "bubble"}, bubbleStyle: {tailDegree: 180}},
+    {type:"text", src:"Cherry Hill, Beacon Hill, and even a slight deceptive slope up Ballard.", position:{col:2, row:4}, size:{width:2, height:1}, style:{outline: "bubble"}, bubbleStyle: {tailDegree: 180}},
+    {type:"image", src:"/comics/denny-regrade/citizen-3.png", position:{col:1, row:5}, size:{width:1, height:1}},
+    {type:"text", src:"But no Denny Hill.", position:{col:2, row:5}, size:{width:1, height:1}, style:{outline: "bubble"}, bubbleStyle: {tailDegree: 180}},
 
-<Comic  position={"left"} speechBubbles={[{ text: "..." }, {text: "You must be mistaken. Seattle doesn't have a *Denny Hill.*"}]} image="/comics/denny-regrade/citizen-1.png"/>
+    {type:"image", src:"/comics/denny-regrade/arthur-1.png", position:{col:3, row:6}, size:{width:1, height:1}},
+    {type:"text", src:"That's right! Because we tore it down!", position:{col:2, row:6}, size:{width:1, height:2}, style:{outline: "bubble"}, bubbleStyle: {tailDegree: 350}},
 
-<Comic  position={"left"} speechBubbles={[{text: "We have First Hill, Capitol Hill"}, {text: "Cherry Hill, Beacon Hill, and even a slight deceptive slope up Ballard."}]} image="/comics/denny-regrade/citizen-2.png"/>
+]}/> 
 
-<Comic  position={"left"} speechBubbles={[{ text: "But no Denny Hill" }]} image="/comics/denny-regrade/citizen-3.png"/>
-
-
-
-<Comic  position={"right"} speechBubbles={[{ text: "That's right! Because we tore it down!" }]} image="/comics/denny-regrade/arthur-1.png"/>
 
 <LOCItem linkOut="https://www.loc.gov/item/2015646669/" image="/loc/cutting-hill.jpg" caption="Cutting down a hill with a powerful jet of water"/>
 
@@ -38,6 +42,13 @@ The water was pumped from Lake Union - over *20,000 gallons* of water were used 
 
 <LOCItem image="/loc/regrade-results.jpg" linkOut="https://www.loc.gov/item/2024693820/" caption="The Washington Hotel, where Theodore Roosevelt stayed when he visited Seattle"/>
 
-<Comic position={"right"} speechBubbles={[{ text: "It was a lot of work, but at least we made a beautiful capitol." }]} image="/comics/denny-regrade/arthur-2.png"/>
-<Comic position={"left"} speechBubbles={[]} image="/comics/denny-regrade/citizen-4.png"/>
-<Comic position={"right"} speechBubbles={[{ text: "... what?" }]} image="/comics/denny-regrade/arthur-3.png"/>
+
+<ComicSection elements={[
+    {type:"image", src:"/comics/denny-regrade/arthur-2.png", position:{col:3, row:1}, size:{width:1, height:1}},
+    {type:"text", src:"It was a lot of work, but at least we made a beautiful capitol.", position:{col:1, row:1}, size:{width:2, height:1}, style:{outline: "bubble"}, bubbleStyle: {tailDegree: 10}},
+
+    {type:"image", src:"/comics/denny-regrade/citizen-4.png", position:{col:1, row:2}, size:{width:1, height:1}},
+
+    {type:"image", src:"/comics/denny-regrade/arthur-3.png", position:{col:3, row:4}, size:{width:1, height:1}},
+    {type:"text", src:"... what?", position:{col:2, row:4}, size:{width:1, height:1}, style:{outline: "bubble"}, bubbleStyle: {tailDegree: 10}},
+]}/>
