--- a/src/app/content/seattle/names/joseprizal.mdx
+++ b/src/app/content/seattle/names/joseprizal.mdx
@@ -4,11 +4,11 @@ location: ["Seattle"]
 latlon: [47.595096, -122.317290]
 zoom: 12
 tags: ["names"]
-cardImage: "/loc/seattle-skyline.jpg"
 locationTitle: Dr. Jose P Rizal Bridge
 address:
 neighborhood:
-cameraImage: "/placeholderThumbnail.png"
+cardImage: "/loc/seattle-skyline.jpg"
+cameraImage: "/loc/seattle-skyline.jpg"
 stampName:
 photoPrompt:
 blurb:
@@ -18,6 +18,14 @@ blurb:
 
 Seattle is a hilly city -- its land was carved from glaciers in the
 Pleistocene ice age.
+
+<ComicSection cols={8} rowHeight="3rem" elements={[
+  {type: "image", src:"/loc/seattle/joseprizal/glacier.png", position:{col:1, row:2}, size:{width:8, height:4}},
+  {type:"text", src:"The glacier was 3,000 feet tall.", position:{col:1, row:1}, size:{width:2, height:1}, style:{outline:"none"}},
+  {type:"text", src:"It moved from north to south, so the ridges it left behind also run from north to south",position:{col:5, row:2}, size:{width:4, height:1}, style:{outline:"none", backgroundColor: "white"}},
+  {type:"text", src:"Lake Washington was also formed this way", position:{col:1, row:5}, size:{width:4, height:1}, style:{outline:"none", fontSize:".6rem"}},
+  {type:"text", src:"I'm off to see Florida for myself!", position:{col:5, row:4}, size:{width:3, height:2}, style:{outline:"bubble"}, bubbleStyle: {tailDegree: 340}},
+]}/>
 
   <Comic position="full" image="/comics/jose-p-rizal/glacier.png" speechBubbles={[]}/>
   
@@ -31,6 +39,18 @@ S Bridge was built in 1911 to carry traffic over the canyon that was carved.
 
 In 1974, this bridge was renamed to the Dr. Jose P. Rizal Bridge, due to the
 efforts of Seattle Filipino Americans Trinidad Rojo and Vic Bacho.
+
+<ComicSection cols={8} rowHeight="3rem" elements={[
+  {type:"image",src:"/loc/seattle/joseprizal/vicAndTrinidad.png", position:{col:1, row:3}, size:{width: 4, height:2}},
+  {type:"text", src:"Vic, you know who is a real hero?", position:{col:1, row:1}, size:{width:3, height:2}, style:{outline:"bubble"}},
+  {type:"text", src:"Who, Trinidad?", position:{col:4, row:2}, size:{width:2, height:1}, style:{outline:"bubble"}},
+  {type:"text", src:"*Dr. Jose P. Rizal!* We should name something in Washington after him", position:{col:5, row:3}, size:{width:4, height:2}, style:{outline:"bubble"}},
+  {type:"text", src:"100% agree. What do you think, something like a street?", position:{col:4, row:5}, size:{width:4, height:2}, style:{outline:"bubble"}},
+  {type:"text", src:"That's too small... we need something **BIG**. Something like...", position:{col:2, row:7}, size:{width:4, height:2}, style:{outline:"bubble"}},
+  {type:"text", src:"Mount St Helens!", position:{col:2, row:9}, size:{width:6, height:2}, style:{outline:"bubble", fontSize:"2rem"}},
+  {type:"image", src:"/loc/seattle/joseprizal/mayor.png", position:{col:7 , row:12}, size:{width:2, height:4}},
+  {type:"text", src:"**Hey!** Hey, what about a bridge and a park?", position:{col:3, row:12}, size:{width:3, height:2}, style:{outline:"bubble"}},
+]}/>
 <Comic position="full" image="/comics/jose-p-rizal/rojo-bacho.png" speechBubbles={[]}/>
 
 <LOCItem linkOut="https://www.loc.gov/resource/sn88085780/1961-06-16/ed-1/?sp=1" image="/loc/joseprizal.jpg" caption="Page from the Filipino Forum, a newspaper for Seattle's Filipino community"  />
