add toast, new navbar for journal

--- a/src/app/content/seattle/architects/arai.mdx
+++ b/src/app/content/seattle/architects/arai.mdx
@@ -4,7 +4,7 @@ locationTitle: Seattle Betsuin Buddhist Temple
 address: 1427 South Main St, Seattle, WA 98144
 location: ["Seattle"] 
 latlon: [47.5998061623727, -122.3132184]
-neighborhood: Internation District
+neighborhood: International District
 zoom: 15
 tags: ["architects", "built"]
 cameraImage: "/placeholderThumbnail.png"
@@ -40,9 +40,9 @@ Before they had a building, Seattle Dojo would operate out of basements througho
 Even though it’s been well over 50 years, Arai’s work has endured -- The Seattle Dojo is still in use as a judo dojo, and the Seattle Betsuin Buddhist Temple is still an active Buddhist church.
 
 
-<LOCItem image="/loc/seattle/arai/plans.jpg" linkOut="https://ddr.densho.org/ddr-densho-430-155/" caption="Sketch of Seattle Betsuin Buddhist Temple street & floor plan. Courtesy of Arai and Kawaguchi Family Collection, Densho" alt=""/>
-<LOCItem image="/loc/seattle/arai/stairs.png" linkOut="https://ddr.densho.org/ddr-densho-430-115/" caption="Blueprints for entrance stairs for Betsuin Temple. Courtesy of Arai and Kawaguchi Family Collection, Densho" alt=""/>
-<LOCItem image="/loc/seattle/arai/wisteria.png" linkOut="https://ddr.densho.org/ddr-densho-430-117/" caption="Design of the Wisteria crest that seals the entrance of the temple. Courtesy of Arai and Kawaguchi Family Collection, Densho" alt=""/>
+<LOCItem allowSave={false} image="/loc/seattle/arai/plans.jpg" linkOut="https://ddr.densho.org/ddr-densho-430-155/" caption="Sketch of Seattle Betsuin Buddhist Temple street & floor plan. Courtesy of Arai and Kawaguchi Family Collection, Densho" alt=""/>
+<LOCItem allowSave={false} image="/loc/seattle/arai/stairs.png" linkOut="https://ddr.densho.org/ddr-densho-430-115/" caption="Blueprints for entrance stairs for Betsuin Temple. Courtesy of Arai and Kawaguchi Family Collection, Densho" alt=""/>
+<LOCItem allowSave={false} image="/loc/seattle/arai/wisteria.png" linkOut="https://ddr.densho.org/ddr-densho-430-117/" caption="Design of the Wisteria crest that seals the entrance of the temple. Courtesy of Arai and Kawaguchi Family Collection, Densho" alt=""/>
 
 The Seattle Betsuin Buddhist Temple was the last project Arai completed before being forcibly interned at Minidoka in Idaho.
 
