--- a/src/app/content/seattle/built/tugboatFoss.mdx
+++ b/src/app/content/seattle/built/tugboatFoss.mdx
@@ -12,6 +12,7 @@ cardImage: "/loc/seattle/tugboatFoss/columbiaRiver.png"
 stampName: "/seattle-general-2.svg"
 photoPrompt: "Visit the pier and see all the different kinds of boats there are."
 blurb: "VVN TODO"
+stickers: [{image: "/loc/seattle/tugboatFoss/boat.png" }, {image: "/loc/seattle/tugboatFoss/fossEmblem.png", linkOut: "https://www.loc.gov/resource/hhh.wa0868.photos/?sp=1", title: "Foss Company motto on the side of the boat"}]
 ---
 
 
@@ -25,10 +26,10 @@ The (second) oldest fireboat:
 <LOCItem linkOut="https://www.loc.gov/resource/hhh.wa0746.photos/?sp=1" image="/loc/seattle/tugboatFoss/fireboatDuwamish.jpg" caption="Fireboat Duwamish" alt="colored photo of red fireboat"/>
 
 <ComicSection elements={[
-    {type:"text", src:"The definitive, MOST-OLDEST wooden tugboat:",position:{col: 1, row: 1}, size: {width:3, height: 2}, style:{outline: "none", fontSize: "1rem"}},
-    {type: "image", src:"/placeholderImage.png", position:{ col: 1, row:1}, size:{width: 3, height: 2}, alt:""},
-    {type:"text", src:"The Arthur Foss!",position:{col:1, row:3}, size:{width:3, height:1}, style:{outline: "none", fontSize:"2rem",  textAlign: "center"}},
-    {type:"text", src:"And though it was constructed in 1889, it still, very impressively, floats (which is the first job of any boat)", position:{col:2, row:4},size:{width: 2, height: 2}, style:{outline: "box", backgroundColor:"white"}}
+    {type:"text", src:"and the definitive, MOST-OLDEST wooden tugboat:",position:{col: 1, row: 1}, size: {width:3, height: 2}, style:{outline: "none", fontSize: "1rem"}},
+    {type: "image", src:"/loc/seattle/tugboatFoss/theFoss.png", position:{ col: 1, row:1}, size:{width: 3, height: 2}, alt:""},
+    {type:"text", src:"The Arthur Foss!",position:{col:1, row:2}, size:{width:3, height:1}, style:{outline: "none", fontSize:"2rem",  textAlign: "center"}},
+    {type:"text", src:"And though it was constructed in 1889, it still, very impressively, floats (which is the first job of any boat)", position:{col:2, row:4},size:{width: 2, height: 1}, style:{outline: "box", backgroundColor:"white"}}
 ]}/>
 
 The *Arthur Foss* held many jobs. It started off in Astoria, Oregon, navigating the dangerous mouth of the Columbia River where it dumps into the Pacific Ocean. Dubbed the “graveyard of the Pacific”, the Arthur Foss, then known as Wallowa, would act as an experience guide and tow boats across the crossing.
@@ -36,8 +37,41 @@ The *Arthur Foss* held many jobs. It started off in Astoria, Oregon, navigating 
 
 <LOCItem linkOut="https://www.loc.gov/resource/ppmsca.18165/" image="/loc/seattle/tugboatFoss/columbiaRiver.png" caption="The Columbia River"/>
 
-<ComicSection overlap={150} elements={[
-    {type:"text", src:"You see that, kid? That's the Columbia River", position:{col: 2, row: 1}, size: {width:2, height: 2}, style:{outline: "bubble",}, bubbleStyle: {tailDegree: 60}},
-
+<ComicSection elements={[
+    {type:"text", src:"You see that, kid? That's the Columbia River", position:{col: 2, row: 1}, size: {width:2, height: 1}, style:{outline: "bubble",}, bubbleStyle: {tailDegree: 60}},
+{type: "image", src:"/loc/seattle/tugboatFoss/columbia.png", position:{col:2, row:2}, size:{width:2, height:3}},
+{type:"text", src:"The winds are fierce.", position:{col: 1, row: 2}, size: {width:1, height: 1}, style:{outline: "bubble",}, bubbleStyle: {tailDegree: 0}},
+{type:"text", src:"The waves are unforgiving. ", position:{col: 1, row: 3}, size: {width:1, height: 1}, style:{outline: "bubble",}, bubbleStyle: {tailDegree: 0}},
+{type:"text", src:"This crossing has defeated over 2,000 boats.", position:{col: 1, row: 4}, size: {width:3, height: 1}, style:{outline: "bubble",fontSize:"1rem"}, bubbleStyle: {tailDegree: 320}},
+{type:"text", src:"...", position:{col: 2, row: 5}, size: {width:1, height: 1}, style:{outline: "bubble", fontSize: "2rem"}},
+{type:"text", src:"go get 'em!",position:{col:2, row:6}, size:{width:2, height:1}, style:{outline: "bubble", fontSize:"2rem",  textAlign: "center"}},
 
 ]}/>
+In 1929, the Foss Launch & Tug Company bought Wallowa and renamed it to Arthur Foss. To help the company pay for the cost of the vessel, they leased it out to feature as the titular boat in Tugboat Annie, the first major movie filmed in Washington State. 
+
+<ComicSection elements={[
+    {type:"text", src:"You're gonna be a star, kid! Gimme your best movie star smile", position:{col: 1, row: 1}, size: {width:2, height: 1}, style:{outline: "bubble",}, },
+    {type:"image", src:"/loc/seattle/tugboatFoss/movie.png",position:{col: 1, row: 1}, size: {width:3, height: 3},},
+    {type:"text", src:"... Is that how you always smile?", position:{col: 3, row: 3}, size: {width:1, height: 1}, style:{outline: "bubble",}, },
+]}/>
+
+Despite becoming an A-list celebrity, the Arthur Foss continued to work as a tugboat, and found itself it many dangerous situations. 
+<ComicSection cols={4} rowHeight="2rem" elements={[
+    {type:"text", src:"In 1937, it caught on fire, and forcefully sank itself to avoid burning down completely.",position:{col: 1, row: 1}, size: {width:4, height: 2}, style:{outline: "none", fontSize: "1rem"}},
+    {type: "image", src:"/loc/seattle/tugboatFoss/fire1.png", position:{ col: 1, row:2}, size:{width: 2, height: 2}, alt:""},
+    {type: "image", src:"/loc/seattle/tugboatFoss/fire2.png", position:{ col: 3, row:2}, size:{width: 2, height: 2}, alt:""},
+    {type:"text",src:"I guess this is better than being on fire...", position:{ col: 2, row:10}, size:{width: 2, height: 2}, style:{outline: "bubble", fontSize: "1rem"}},
+    {type: "image", src:"/loc/seattle/tugboatFoss/fire3.png", position:{ col: 1, row:11}, size:{width: 4, height: 7}, alt:""},
+]}/>
+
+In 1941, it found itself caught in Hawaii during the war. Afraid of the bright white and green attracting torpedoes, the crew mixed white paint with engine grease to paint the boat a dark gray to blend in with the ocean
+
+
+<ComicSection cols={4} elements={[
+    {type:"text", src:"Better this than sinking again", position:{col: 3, row: 1}, size: {width:2, height: 1}, style:{outline: "bubble",}, },
+    {type:"image", src:"/loc/seattle/tugboatFoss/paint.png",position:{col: 1, row: 1}, size: {width:3, height: 3},},
+]}/>
+
+And in 1947, while being transported back from Hawaii, it fell off its keel blocks and damaged its hull.
+
+Finally, it was retired in 1968. The Foss Launch and Tug Company, however, is still in operation as the largest tug company on the west coast, and you can see other tug boats still bearing the “Foss” name navigating the ship canal.
