bridge, medgar evers, fix for comic overlap

--- a/src/app/content/seattle/built/medgarEversPool.mdx
+++ b/src/app/content/seattle/built/medgarEversPool.mdx
@@ -1,5 +1,5 @@
 ---
-title:
+title: Seattle's tribute across the nation
 locationTitle: Medgar Evers Pool
 address: 500 23rd Ave
 location: ["Seattle"] 
@@ -7,12 +7,12 @@ latlon: [47.60669250396333, -122.3024082887183]
 neighborhood: Central District
 zoom: 15
 tags: ["built"]
-cameraImage: "/placeholderThumbnail.png"
-cardImage: "/placeholderThumbnail.png"
+cameraImage: "/loc/seattle/medgarEversPool/greaterSeattle.png"
+cardImage: "/loc/seattle/medgarEversPool/map.jpg"
 stampName:
 photoPrompt:
 blurb:
-stickers: [{image: "/loc/seattle/medgarEversPool/greaterSeattle.png", linkOut: "https://www.loc.gov/resource/sn84025811/1903-12-25/ed-1/?sp=1"}]
+stickers: [{image: "/loc/seattle/medgarEversPool/greaterSeattle.png", linkOut: "https://www.loc.gov/resource/sn84025811/1903-12-25/ed-1/?sp=1"},{image: "/loc/seattle/medgarEversPool/compass.png", linkOut: "https://www.loc.gov/resource/g4284sm.g4284sm_g09315190502/?sp=45&st=image&r=0.64,0.127,0.451,0.32,0"}]
 ---
 
 The Medgar Evers pool was funded in part by the federal Model Cities program, which aimed to provide more equitable recreation and athletic activities in cities across the United States. Seattle applied for the federal grant to create better infrastructure for its International District, Pioneer Square, and Central Area neighborhoods.
@@ -25,13 +25,30 @@ Seattle has a large Black community, with three large migrations of folks coming
 
 <LOCItem image="/loc/seattle/medgarEversPool/seattleRepNews.png" linkOut="https://www.loc.gov/resource/sn84025811/1903-04-17/ed-1/?sp=6&st=image&r=-0.107,-0.101,1.131,0.801,0"/>
 
-{/* 
-Sticker template: 
-{image: "", linkOut: ""}
-*/}
+The Seattle Republican had national spread, having Pullman Porters distribute papers on their train runs from the west coast to the east.
 
-{/* <ComicSection elements={[
-    {type:"image", src:"", position:{col:1, row:1}, size:{width:1, height:1}},
-    {type:"text", src:"", position:{col:1, row:1}, size:{width:1, height:1}, style:{outline: "bubble"}, bubbleStyle: {tailDegree: 0}},
+<BigLink link="https://blogs.loc.gov/picturethis/2015/02/pictures-to-go-sleeping-car-quarters-and-sleeping-car-porters/" thumbnail="/loc/seattle/medgarEversPool/porter.jpg" title="Sleeping Car Quarters and Sleeping Car Porters"/>
 
-]}/>  */}
+ <ComicSection elements={[
+    {type:"image", src:"/loc/seattle/medgarEversPool/cayton1.png", position:{col:3, row:2}, size:{width:1, height:2}},
+    {type:"text", src:"Horace Cayton Sr, creator of The Seattle Republican", position:{col:3, row:3},style:{backgroundColor:"white",border:'none', fontSize:".7rem"}, size:{width: 1, height:1}},
+    {type:"image", src:"/loc/seattle/medgarEversPool/cayton2.png", position:{col:3, row:4}, size:{width:1, height:2}},
+    {type:"image", src:"/loc/seattle/medgarEversPool/cayton3.png", position:{col:3, row:6}, size:{width:1, height:2}},
+    {type:"text", src:"Come to Seattle! There are lots of job opportunities for you here, and they pay pretty well.", position:{col:1, row:1}, size:{width:2, height:1}, style:{outline: "bubble"}, bubbleStyle: {tailDegree: 0}},
+    {type:"text", src:"And compared to the rest of the country, African American people will face less expressions of prejudice in Seattle", position:{col:1, row:2}, size:{width:2, height:1}, style:{outline: "bubble"}, bubbleStyle: {tailDegree: 0}},
+    {type:"text", src:"Though that may be because many people’s vitriol is directed towards the Indigenous and Chinese people here instead...", position:{col:1, row:3}, size:{width:2, height:2}, style:{outline: "bubble"}, bubbleStyle: {tailDegree: 0}},
+    {type:"text", src:"Seattle isn’t perfect! But we’ve got jobs!", position:{col:2, row:6}, size:{width:1, height:1}, style:{outline: "bubble"}, bubbleStyle: {tailDegree: 0}},
+]}/>  
+Note: this is not to say that there was no discrimination against African American people in Seattle. The Seattle Republican eventually shut down when Cayton lost a lawsuit he against a restaurant that refused future service to him.
+
+But as time went on, and as many of the Chinese and Indigenous people were driven out of Seattle, more hatred was directed towards Seattle’s Black community. For example, though not written in law, some practices systematically blocked people of color from purchasing homes in specific neighborhoods.
+
+<LOCItem image="/placeholderThumbnail.png" showSave={false}/>
+
+With the new pool being built in Seattle’s Central District, the community petitioned to name it after Medgar Evers. In a document, they wrote of him:
+
+“He became a hero, not because he died, but because he learned to live with the mounting probability of violent death and refused to turn aside. Because his life so symbolized the struggle of a whole people to be free, he was shot in the back.”
+
+You can read more about Medgar Evers' life here:
+
+<BigLink link="https://blogs.loc.gov/loc/2021/07/medgar-evers-a-hero-in-life-and-death/" thumbnail="/loc/seattle/medgarEversPool/statue.jpg" title="Medgar Evers: A Hero in Life and Death"/>
