--- a/src/app/content/seattle/built/tugboatFoss.mdx
+++ b/src/app/content/seattle/built/tugboatFoss.mdx
@@ -37,7 +37,7 @@ The *Arthur Foss* held many jobs. It started off in Astoria, Oregon, navigating 
 
 <LOCItem linkOut="https://www.loc.gov/resource/ppmsca.18165/" image="/loc/seattle/tugboatFoss/columbiaRiver.png" caption="The Columbia River"/>
 
-<ComicSection elements={[
+<ComicSection overlap={150} elements={[
     {type:"text", src:"You see that, kid? That's the Columbia River", position:{col: 2, row: 1}, size: {width:2, height: 1}, style:{outline: "bubble",}, bubbleStyle: {tailDegree: 60}},
 {type: "image", src:"/loc/seattle/tugboatFoss/columbia.png", position:{col:2, row:2}, size:{width:2, height:3}},
 {type:"text", src:"The winds are fierce.", position:{col: 1, row: 2}, size: {width:1, height: 1}, style:{outline: "bubble",}, bubbleStyle: {tailDegree: 0}},
