montlake bridge updates

--- a/src/app/content/seattle/built/montlakeBridge.mdx
+++ b/src/app/content/seattle/built/montlakeBridge.mdx
@@ -1,18 +1,18 @@
 ---
-title:
+title: The most unique bridge in Seattle
 locationTitle: Montlake Bridge
-address: Montlake Blvd E, Seattle, WA 98112
+address: Montlake Blvd E
 location: ["Seattle"] 
 latlon: [47.64740913305527, -122.30456014763188]
 neighborhood: Montlake
 zoom: 15
 tags: ["built"]
-cameraImage: "/placeholderThumbnail.png"
-cardImage: "/placeholderThumbnail.png"
+cameraImage: "/loc/seattle/montlakeBridge/doubleLeaf.png"
+cardImage: "/loc/seattle/montlakeBridge/bascule.png"
 stampName:
-photoPrompt:
-blurb:
-stickers: []
+photoPrompt: You can walk over and under the bridge. What details do you notice? Can you spot the counterweights?
+blurb: Seattle is a city of hills, valleys, and waterways, with bridges connecting people together. The Montlake Bridge is unique in its engineering, as its design was to prevent the city from getting sued.
+stickers: [{image: "/loc/seattle/montlakeBridge/tower.png", linkOut: "https://www.loc.gov/resource/hhh.wa0441.sheet/?sp=3", title: "Diagram of Montlake Bridge control tower"},{image: "/loc/seattle/montlakeBridge/seattleMap.png", linkOut: "https://www.loc.gov/resource/hhh.wa0441.sheet/?sp=1", title: "Map of Montlake Bridge location"},{image: "/loc/seattle/montlakeBridge/montlakeBridge.png", linkOut: "https://www.loc.gov/resource/hhh.wa0441.sheet/?sp=1", title: "Title of engineering report"},{image: "/loc/seattle/montlakeBridge/bridgeDiagram.png", linkOut: "https://www.loc.gov/resource/hhh.wa0441.sheet/?sp=1", title: "Diagram of bridge from HAER report"}]
 ---
 
 The Lake Washington Ship Canal was built to create a navigable waterway from the Puget Sound to Lake Washington. 
@@ -27,11 +27,21 @@ With a new waterway, there was also a new problem - the city was now divided in 
 
 The Ballard Bridge, Fremont Bridge, University Bridge, and Montlake Bridge.
 
+
+<ComicSection rowHeight="3rem" elements={[
+    {type:'text', position:{col:1, row:1}, size:{width:3, height:1}, style:{outline:"box", fontSize:"1rem", backgroundColor:"white"}, src:"The bridge is double-leaf, which means the road divides into two parts when lifted."},]}/>
+
 <LOCItem image="/loc/seattle/montlakeBridge/doubleLeaf.png" linkOut="https://www.loc.gov/resource/hhh.wa0441.sheet/?sp=1&st=image" caption="" alt=""/>
+<ComicSection rowHeight="3rem" elements={[
+    {type:'text', position:{col:1, row:1}, size:{width:3, height:1}, style:{outline:"box", fontSize:"1rem", backgroundColor:"white"}, src:"It is also a bascule bridge, which is French for balance - to save energy, the weight of the road-half is perfect balanced on the other side with a counterweight."},]}/>
+
+<LOCItem image="/loc/seattle/montlakeBridge/bascule.png" linkOut="https://www.loc.gov/resource/hhh.wa0441.sheet/?sp=3&st=image" caption="" alt=""/>
+
+<ComicSection rowHeight="3rem" elements={[
+    {type:'text', position:{col:1, row:1}, size:{width:3, height:1}, style:{outline:"box", fontSize:"1rem", backgroundColor:"white"}, src:"The Montlake Bridge also uses trunnions, which is the pivot point that the leaves and counterweight rotate around."},]}/>
 
 <LOCItem image="/loc/seattle/montlakeBridge/trunnion.png" linkOut="https://www.loc.gov/resource/hhh.wa0441.sheet/?sp=2&st=image" caption="" alt=""/>
 
-<LOCItem image="/loc/seattle/montlakeBridge/bascule.png" linkOut="https://www.loc.gov/resource/hhh.wa0441.sheet/?sp=3&st=image" caption="" alt=""/>
 They were inspired by similar bridges in Chicago, designed to cross the Chicago River.
 
 <LOCItem image="/loc/seattle/montlakeBridge/chicagoBridge.png" linkOut="https://www.loc.gov/resource/stereo.1s12313/" caption="Michigan Avenue Bridge over Chicago River" alt="stereograph of bridge opening up for a boat to pass under"/>
@@ -41,7 +51,9 @@ The first bascule bridge that was completed was the Fremont Bridge in 1917, and 
 The Montlake Bridge was vastly delayed, being the last of the four bridges to be constructed, the city revised its plans to avoid further litigation. 
 
 <ComicSection elements={[
-    {type:"image", src:"/placeholderThumbnail.png", position:{col:1, row:1}, size:{width:1, height:1}},]}/>
+    {type:"image", src:"/loc/seattle/montlakeBridge/protestors.png", position:{col:1, row:1}, size:{width:3, height:4}},
+    {type: "text", style:{outline:"bubble"}, src:"I want to see football!!!!", position:{col:3, row:3}, size:{width:1, height:1}}
+]}/>
 
 
 Thus, of all the bascule bridges in the entire city of Seattle, the Montlake Bridge is unique in that the trunnions, the pivot points on which the roads of the bridge turn, sit on top of concrete blocks.
